# lastAOC

./: README.md
aoc2022/: dune-project
aoc2022/lib/: advent.ml  advent.mli  day1.ml  day2.ml  day3.ml  day3.mli  day4.ml  day5.ml  day5.mli  day6.ml  day6.mli  day8.ml  dune
aoc2022/test/: dune
aoc2025/: .gitignore  aoc2025.opam  dune-project
aoc2025/_build/: log
aoc2025/lib/: advent.ml  day1.ml  day1.mli  dune  utils.ml
