(library
  (name advent)
  (libraries core str)
  (modules advent))

(library
  (name day1)
  (libraries core advent)
  (modules day1))

(library
  (name day2)
  (libraries core advent)
  (preprocess (pps ppx_compare))
  (modules day2))

(library
  (name day3)
  (libraries core advent)
  (modules day3))

(library
  (name day4)
  (libraries core advent)
  (modules day4))

(library
  (name day5)
  (libraries core advent)
  (modules day5))

(library
  (name day6)
  (libraries core advent)
  (modules day6))
